# quire

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: starter.policy
src/: decision.rs  error.rs  lib.rs  main.rs  parser.rs  policy.rs  rule.rs
tests/: cli.rs
